Quick bodge to fix text overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,8 +214,6 @@ a {
 .cards {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
   border-radius: 5px;
-  min-height: 200px;
-  max-height: 200px;
   padding: 16px;
   text-align: center;
   background-color: #303136;
